--- a/plugin.xml
+++ b/plugin.xml
@@ -20,8 +20,8 @@
         </config-file>
         
 <!--         <source-file src="src/android/libs/locationapi/armeabi/libdecryptlib.so" target-dir="src/com/ionicframework/locationplugin/libs" /> -->
-        <source-file src="src/android/libs/locationapi/armeabi-v7a/libdecryptlib.so" target-dir="src/com/ionicframework/locationplugin/libs" />
-        <source-file src="src/android/libs/locationapi/locationapi.jar" target-dir="src/com/ionicframework/locationplugin/libs" />
+        <source-file src="src/android/libs/locationapi/armeabi-v7a/libdecryptlib.so" target-dir="libs" />
+        <source-file src="src/android/libs/locationapi/locationapi.jar" target-dir="libs" />
 <!--         <source-file src="src/android/libs/locationapi/mips/libdecryptlib.so" target-dir="src/com/ionicframework/locationplugin/libs" />
         <source-file src="src/android/libs/locationapi/x86/libdecryptlib.so" target-dir="src/com/ionicframework/locationplugin/libs" /> -->
         <source-file src="src/android/locationplugin.java" target-dir="src/com/ionicframework/locationplugin" />
