--- a/plugin.xml
+++ b/plugin.xml
@@ -15,7 +15,7 @@
     <platform name="android">
         <config-file target="res/xml/config.xml" parent="/*">
             <feature name="LocationPlugin">
-                <param name="android-package" value="com.ionicframework.locationplugin"/>
+                <param name="android-package" value="com.ionicframework.locationplugin.locationplugin"/>
             </feature>
         </config-file>
         
