--- a/plugin.xml
+++ b/plugin.xml
@@ -23,7 +23,7 @@
                 <param name="android-package" value="com.ionicframework.locationplugin.locationplugin"/>
             </feature> -->
             <feature name="WheramiPlugin">
-                <param name="android-package" value="com.wheramiplugin/Wherami"/>
+                <param name="android-package" value="com.wheramiplugin/WheramiPlugin"/>
             </feature>
         </config-file>
         
@@ -35,6 +35,6 @@
         <source-file src="src/android/libs/locationapi/x86/libdecryptlib.so" target-dir="src/com/ionicframework/locationplugin/libs" /> -->
 
 <!--         <source-file src="src/android/locationplugin.java" target-dir="src/com/ionicframework/locationplugin" /> -->
-        <source-file src="src/android/Wherami.java" target-dir="src/com/ionicframework/locationplugin" />
+        <source-file src="src/android/WheramiPlugin.java" target-dir="src/com/ionicframework/locationplugin" />
     </platform>
 </plugin>
