--- a/plugin.xml
+++ b/plugin.xml
@@ -3,8 +3,8 @@
 <plugin xmlns="http://www.phonegap.com/ns/plugins/1.0"
     id="com.ionicframework.locationplugin"
     version="0.1.0">
-    <name>LocationPlugin</name>
-    <description>Location Plugin</description>
+    <name>WheramiPlugin</name>
+    <description>Wherami Plugin</description>
     
     
 <!--     <js-module src="www/locationplugin.js" name="LocationPlugin">
@@ -35,6 +35,6 @@
         <source-file src="src/android/libs/locationapi/x86/libdecryptlib.so" target-dir="src/com/ionicframework/locationplugin/libs" /> -->
 
 <!--         <source-file src="src/android/locationplugin.java" target-dir="src/com/ionicframework/locationplugin" /> -->
-        <source-file src="src/android/WheramiPlugin.java" target-dir="src/com/ionicframework/locationplugin" />
+        <source-file src="src/android/WheramiPlugin.java" target-dir="src/com/ionicframework/wheramiplugin" />
     </platform>
 </plugin>
